<resources>
    <string name="app_name">Calisthee</string>
    <string name="ek_img_content">ExportKit Image</string>
    <string name="your_workout_plan_30___mins_string">Your workout plan30 ~ mins</string>
    <string name="pushup">Pushup: 2.5 mins</string>
    <string name="community_ek3_string">Community</string>
    <string name="challenge_requests_string">Challenge Requests</string>
    <string name="share_your_progress_string">Share\nyour\nProgress</string>
    <string name="leaderboard_string">Global\nLeaderboard</string>
    <string name="compete_with_friends_string">Compete\nwith\nFriends</string>
    <string name="compete_requests_string">Compete\nRequests</string>
    <string name="challenge_friends_string">Challenge Friends</string>
    <string name="renee_olson_string">Renee Olson</string>
    <string name="renee_olson_ek1_string">Renee Olson</string>
    <string name="password_string">Password</string>
    <string name="email_string">Email</string>
    <string name="login_ek3_string">Login</string>
    <string name="login_page_string">Login Page</string>
    <string name="login_ek4_string">Login</string>
    <string name="welcome__string">Welcome!</string>
    <string name="welcome_back_champ_string">Welcome Back Champ</string>
    <string name="challenges_string">Challenges</string>
    <string name="barbara_is_challenging_you__string">Barbara is challenging you!</string>
    <string name="push_ups_string">Push Ups</string>
    <string name="paul_is_challenging_you__string">Paul is challenging you!</string>
    <string name="pull_ups_string">Pull Ups</string>
    <string name="water_string">Water</string>
    <string name="don_t_forget_to_drink_your_water__string">Dont forget to drink your water!</string>
    <string name="today_string">Today</string>
    <string name="don_t_forget_to_drink_your_water__ek1_string">Dont forget to drink your water!</string>
    <string name="yesterday_string">Yesterday</string>
    <string name="alejandro_suarez_string">Alejandro Suarez</string>
    <string name="gender">Sex</string>
    <string name="sextext_string">Male</string>
    <string name="name_ek1_string">Weight</string>
    <string name="show_string">75kg</string>
    <string name="name_ek2_string">Height</string>
    <string name="heighttext_string">178cm</string>
    <string name="name_ek3_string">Date of Birth</string>
    <string name="dobtext_string">Apr 1, 1987</string>
    <string name="registration_string">Registration</string>
    <string name="sign_up_string">Sign Up</string>
    <string name="login_string">Login</string>
    <string name="sign_up_ek1_string">Sign Up</string>
    <string name="username_string">Username</string>
    <string name="i_would_like_to_receive_your_newsletter_and_other_promotional_information__string">I would like to receive your newsletter and other promotional information.</string>
    <string name="mon_string">Mon</string>
    <string name="_15_string">15</string>
    <string name="april_string">April</string>
    <string name="fru_string">Fru</string>
    <string name="_12_string">12</string>
    <string name="sat_string">Sat</string>
    <string name="_13_string">13</string>
    <string name="sun_string">Sun</string>
    <string name="_14_string">14</string>
    <string name="thu_string">Thu</string>
    <string name="_11_string">11</string>
    <string name="tue_string">Tue</string>
    <string name="_16_string">16</string>
    <string name="wed_string">Wed</string>
    <string name="_17_string">17</string>
    <string name="wednesday__17_apr_2019_string">Wednesday, 17 Apr 2019</string>
    <string name="renee_olson_ek2_string">Renee Olson</string>
    <string name="_1st_string">1ST</string>
    <string name="text_string"> </string>
    <string name="social_login_string">Social Media Login</string>
    <string name="login_ek1_string">Login</string>
    <string name="register_ek1_string">Register</string>
    <string name="workouts_string">Workouts</string>
    <string name="______label_string">Explore</string>
    <string name="____body_2_string">Cardio</string>
    <string name="______label_ek1_string">EXPLORE</string>
    <string name="____body_2_ek1_string">Strength</string>
    <string name="______label_ek2_string">Explore</string>
    <string name="____body_2_ek2_string">Yoga</string>
    <string name="warm_up_10_min_string">Warm up       10 min</string>
    <string name="hiit_20_min_string">HIIT         20 min</string>
    <string name="pull_ups_20_min_string">Pull ups         20 min</string>
    <string name="uplifting_20_min_string">Uplifting        20 min</string>
    <string name="pull_ups_20_min_ek1_string">Pull ups         20 min</string>
    <string name="hiit_20_min_ek1_string">HIIT         20 min</string>
    <string name="pull_ups_20_min_ek2_string">Pull ups         20 min</string>
    <string name="pull_ups_20_min_ek3_string">Pull ups         20 min</string>
    <string name="pull_ups_20_min_ek4_string">Pull ups         20 min</string>
    <string name="pull_ups_20_min_ek5_string">Pull ups         20 min</string>
    <string name="find_your_next_class____string">Find your next class...</string>
    <string name="workoutplan">Workout Plan</string>
    <string name="title_activity_workout_search">WorkoutSearchActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="logout_button">Logout</string>

    <string name="menu_home">Home/Search</string>
    <string name="menu_profile">Profile</string>
    <string name="menu_workout_plan">Workout Plan</string>
    <string name="menu_community">Community</string>
    <string name="menu_compete">Compete VS Friends</string>
    <string name="menu_sched">Schedule Workout</string>
    <string name="menu_submit">Submit Workout</string>
    <string name="menu_notifications">View Notifications</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="workouts_for_everyone">Workouts for Everyone</string>
</resources>