<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_baseline_search_24"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/ic_baseline_account_circle_24"
            android:title="@string/menu_profile" />
        <item
            android:id="@+id/nav_workout_plan"
            android:icon="@drawable/ic_baseline_format_list_numbered_24"
            android:title="@string/menu_workout_plan" />

        <item
            android:id="@+id/nav_community"
            android:icon="@drawable/ic_baseline_group_24"
            android:title="@string/menu_community" />

        <item
            android:id="@+id/nav_compete"
            android:icon="@drawable/ic_baseline_sports_kabaddi_24"
            android:title="@string/menu_compete" />

        <item
            android:id="@+id/nav_sched"
            android:icon="@drawable/ic_baseline_schedule_24"
            android:title="@string/menu_sched" />

        <item
            android:id="@+id/nav_submit_workout"
            android:icon="@drawable/ic_baseline_cloud_upload_24"
            android:title="@string/menu_submit" />

        <item
            android:id="@+id/nav_notifcations"
            android:icon="@drawable/ic_baseline_circle_notifications_24"
            android:title="@string/menu_notifications" />

    </group>
</menu>