<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterActivity">


    <ImageView
        android:id="@+id/image_background"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:scaleType="centerCrop"
        android:src="@drawable/background_image"
        android:background="#090030"
        app:layout_constraintBottom_toTopOf="@+id/gl_34pc"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/welcome_"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal|center"
        android:layout_marginTop="16dp"
        android:gravity="center"
        android:text="@string/welcome__string"
        android:textColor="@color/login_ek3_color"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/image_background" />

    <TextView
        android:id="@+id/registration"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal|center"
        android:layout_marginTop="56dp"
        android:gravity="center"
        android:text="@string/registration_string"
        android:textColor="@color/login_ek3_color"
        android:textSize="36sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/welcome_" />


    <TextView
        android:id="@+id/sign_up_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal|center"
        android:layout_marginTop="8dp"
        android:gravity="center"
        android:text="@string/sign_up_ek1_string"
        android:textColor="@color/sign_up_ek1_color"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/image_background" />

    <ImageView
        android:id="@+id/bg"
        android:layout_width="343dp"
        android:layout_height="50dp"
        android:layout_marginTop="32dp"
        android:contentDescription="bg"
        android:src="@drawable/bg"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sign_up_tv" />


    <EditText
        android:id="@+id/username"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="44dp"
        android:layout_marginBottom="32dp"
        android:hint="@string/username_string"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/bg2"
        app:layout_constraintEnd_toStartOf="@+id/gl_90pc"
        app:layout_constraintStart_toStartOf="@+id/gl_10pc"
        app:layout_constraintTop_toBottomOf="@+id/sign_up_tv" />

    <ImageView
        android:id="@+id/bg2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:contentDescription="bg_ek1"
        android:src="@drawable/bg_ek1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bg" />


    <EditText
        android:id="@+id/email"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="44dp"
        android:layout_marginBottom="32dp"
        android:hint="@string/email_string"
        android:textSize="20sp"
        android:inputType="textEmailAddress"
        app:layout_constraintBottom_toTopOf="@+id/bg3"
        app:layout_constraintEnd_toStartOf="@+id/gl_90pc"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/gl_10pc"
        app:layout_constraintTop_toBottomOf="@+id/bg"
        app:layout_constraintVertical_bias="0.769" />

    <ImageView
        android:id="@+id/bg3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:contentDescription="bg"
        android:src="@drawable/bg"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bg2" />

    <EditText
        android:id="@+id/password"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:hint="@string/password_string"
        android:textSize="20sp"
        android:inputType="textPassword"
        app:layout_constraintEnd_toStartOf="@+id/vector"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/gl_10pc"
        app:layout_constraintTop_toBottomOf="@+id/bg2" />

    <ImageView
        android:id="@+id/vector"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="44dp"
        android:contentDescription="vector"
        android:src="@drawable/vector"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.887"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bg2" />


    <Button
        android:id="@+id/Register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="4dp"
        android:layout_marginRight="4dp"
        android:layout_marginBottom="4dp"
        android:background="@drawable/rec_cal_shape_dark"
        android:text="@string/sign_up_ek1_string"
        android:textColor="#FAF8F8"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/i_would_like_to_receive_your_newsletter_and_other_promotional_information_"
        app:layout_constraintVertical_bias="0.888" />

    <Button
        android:id="@+id/login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:onClick="login2Clicked"
        android:text="@string/login_string"
        android:textColor="@color/login_color"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/sign_up_tv"
        app:layout_constraintTop_toTopOf="@+id/gl_34pc" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/gl_34pc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.34" />


    <CheckBox
        android:id="@+id/i_would_like_to_receive_your_newsletter_and_other_promotional_information_"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/i_would_like_to_receive_your_newsletter_and_other_promotional_information__string"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bg3" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/gl_10pc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.10" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/gl_90pc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.90" />

</androidx.constraintlayout.widget.ConstraintLayout>